# insights-llm-api

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy_stage.yml  main.yaml
app/: db.py  insights_api_client.py  llm_analytics.py  log-config.yml  logger.py  main.py  openai_client.py  secret.py  settings.py
app/clients/: insights_api_client.py  openai_client.py  user_profile_client.py
app/mcda/: __init__.py  examples.py  mcda.py  prompt.py
app/views/: __init__.py  llm_analytics.py  save_search_choice.py  search.py
app/views/mcda/: endpoint.py  examples.py  formatters.py  mcda.py  prompt.py
docs/: database_schema.md  endpoints.md
tests/: test_analytics.py
