[tool.poetry]
name = "insights-llm-api"
version = "0.1.0"
description = "LLM analytics"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29"
aiohttp = "^3.9.5"
starlette = "^0.20.4"
uvicorn = "^0.18.2"
ujson = "^5.4.0"
sentry-sdk = {version = "^2.0.0", extras = ["starlette"]}
pyyaml = "^6.0.1"
openai = "^1.26.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
